@@ -58,8 +58,11 @@
 
     <section class="descuss">
         <div class="discus-spost">
+            <!-- question -->
             <div class="Ask-question">
+                <!-- justify-class -->
                 <div class="justify">
+                    <!-- btns for increment or decrement number -->
                     <div class="btn-control">
                         <div>
                             <button class="nex"><i class="fas fa-chevron-up"></i></button>
@@ -97,6 +100,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- user info -->
                 <div class="post-user-info">
                     <div>
                         <div>
@@ -109,6 +113,7 @@
                     </div>
                 </div>
             </div>
+            <!-- end of question -->
             <div class="reply-control">
                 <div>
                     <p>670 answer <a href="">NEW ANSWER</a></p>
